# 3DS_Homebrew_Template

./: CMakeLists.txt  README.md  build.sh  make3DS.sh  makeCIA.sh  project.rsf
source/: main.c
